# apriltag-detection-demo

./: CMakeLists.txt  README.md
include/opencv2/: cvconfig.h
lib/: filenames.txt  libopencv_bioinspired.so.3.3.1  libopencv_calib3d.so.3.3  libopencv_ccalib.so.3.3  libopencv_cvv.so.3.3.1  libopencv_datasets.so.3.3  libopencv_dpm.so.3.3.1  libopencv_face.so.3.3  libopencv_features2d.so.3.3  libopencv_flann.so.3.3  libopencv_img_hash.so.3.3.1  libopencv_imgcodecs.so.3.3.1  libopencv_ml.so.3.3  libopencv_objdetect.so.3.3.1  libopencv_optflow.so.3.3  libopencv_phase_unwrapping.so.3.3  libopencv_reg.so.3.3  libopencv_stereo.so.3.3.1  libopencv_stitching.so.3.3  libopencv_text.so.3.3  libopencv_tracking.so.3.3.1  libopencv_video.so.3.3.1  libopencv_videoio.so.3.3  libopencv_videostab.so.3.3  libopencv_viz.so.3.3.1  libopencv_ximgproc.so.3.3.1  libopencv_xobjdetect.so.3.3  libopencv_xphoto.so.3.3.1
lib/pkgconfig/: opencv.pc
src/: main.cpp
